--- a/jocarbore/jocarbore-war/src/main/webapp/WEB-INF/web.xml
+++ b/jocarbore/jocarbore-war/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,12 @@
 	<welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <servlet>
+    	<servlet-name>userprofile</servlet-name>
+    	<servlet-class>ro.infoiasi.cpa.jocarbore.GetUserProfileServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    	<servlet-name>userprofile</servlet-name>
+    	<url-pattern>/userprofile</url-pattern>
+    </servlet-mapping>
 </web-app>
