--- a/jocarbore/jocarbore-war/pom.xml
+++ b/jocarbore/jocarbore-war/pom.xml
@@ -46,6 +46,17 @@
 			<artifactId>json</artifactId>
 			<version>20070829</version>
 		</dependency>
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.4</version>
+		</dependency>
         <!-- Test Dependencies -->
         <dependency>
             <groupId>com.google.appengine</groupId>
